DAS-1935 - Enable RSSMIF16D production HOSS regression tests.

--- a/test/hoss/HOSS_Regression.ipynb
+++ b/test/hoss/HOSS_Regression.ipynb
@@ -52,7 +52,8 @@
     "from harmony import BBox, Client, Collection, Dimension, Environment, Request\n",
     "\n",
     "from utilities import (compare_results_to_reference_file, print_success,\n",
-    "                       remove_results_files, submit_and_download)"
+    "                       remove_results_files, submit_and_download,\n",
+    "                       test_is_configured)"
    ]
   },
   {
@@ -146,9 +147,13 @@
     "                             'bounds_collection': Collection(id='C1245618475-EEDTEST'),\n",
     "                             'bounds_granule_id': 'G1255863984-EEDTEST'}\n",
     "\n",
+    "hoss_prod_information = {'collection': Collection(id='C1996546500-GHRC_DAAC'),\n",
+    "                         'granule_id': 'G2040739631-GHRC_DAAC'}\n",
+    "\n",
     "hoss_env = {Environment.LOCAL: hoss_non_prod_information,\n",
     "            Environment.SIT: hoss_non_prod_information,\n",
-    "            Environment.UAT: hoss_non_prod_information}\n",
+    "            Environment.UAT: hoss_non_prod_information,\n",
+    "            Environment.PROD: hoss_prod_information}\n",
     "\n",
     "if harmony_environment in hoss_env:\n",
     "    hoss_info = hoss_env[harmony_environment]\n",
@@ -183,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if hoss_info is not None:\n",
+    "if test_is_configured(hoss_info, 'collection'):\n",
     "    hoss_var_bbox_file_name = 'hoss_var_bbox.nc4'\n",
     "    hoss_var_bbox_bbox = BBox(w=-150, s=0, e=-105, n=15)\n",
     "    hoss_var_bbox_request = Request(collection=hoss_info['collection'],\n",
@@ -200,7 +205,7 @@
     "\n",
     "    print_success('HOSS variable and bounding box request.')\n",
     "else:\n",
-    "    print(f'HOSS is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+    "    print(f'Skipping - HOSS is not configured for this test in {harmony_environment}.')"
    ]
   },
   {
@@ -232,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if hoss_info is not None:\n",
+    "if test_is_configured(hoss_info, 'collection'):\n",
     "    grid_edge_file_name = 'hoss_grid_edge.nc4'\n",
     "    grid_edge_bbox = BBox(w=-15, s=-60, e=15, n=-30)\n",
     "    grid_edge_request = Request(collection=hoss_info['collection'],\n",
@@ -249,7 +254,7 @@
     "\n",
     "    print_success('HOSS request crossing longitudinal edge.')\n",
     "else:\n",
-    "    print(f'HOSS is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+    "    print(f'Skipping - HOSS is not configured for this test in {harmony_environment}.')"
    ]
   },
   {
@@ -269,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if hoss_info is not None:\n",
+    "if test_is_configured(hoss_info, 'collection'):\n",
     "    no_bbox_file_name = 'hoss_no_bbox.nc4'\n",
     "    no_bbox_request = Request(collection=hoss_info['collection'],\n",
     "                              granule_id=[hoss_info['granule_id']],\n",
@@ -284,7 +289,7 @@
     "\n",
     "    print_success('HOSS request without bounding box.')\n",
     "else:\n",
-    "    print(f'HOSS is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+    "    print(f'Skipping - HOSS is not configured for this test in {harmony_environment}.')"
    ]
   },
   {
@@ -304,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if hoss_info is not None:\n",
+    "if test_is_configured(hoss_info, 'collection'):\n",
     "    hoss_all_vars_file_name = 'hoss_all_vars.nc4'\n",
     "    hoss_all_vars_bbox = BBox(w=-150, s=0, e=-105, n=15)\n",
     "    hoss_all_vars_request = Request(collection=hoss_info['collection'],\n",
@@ -320,7 +325,7 @@
     "\n",
     "    print_success('HOSS all-variable request.')\n",
     "else:\n",
-    "    print(f'HOSS is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+    "    print(f'Skipping - HOSS is not configured for this test in {harmony_environment}.')"
    ]
   },
   {
@@ -342,7 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if hoss_info is not None:\n",
+    "if test_is_configured(hoss_info, 'collection'):\n",
     "    all_no_bbox_file_name = 'hoss_all_no_bbox.nc4'\n",
     "    all_no_bbox_request = Request(collection=hoss_info['collection'],\n",
     "                                  granule_id=hoss_info['granule_id'])\n",
@@ -357,7 +362,7 @@
     "\n",
     "    print_success('HOSS all-variable, no bounding box request.')\n",
     "else:\n",
-    "    print(f'HOSS is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+    "    print(f'Skipping - HOSS is not configured for this test in {harmony_environment}.')"
    ]
   },
   {
@@ -389,7 +394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if hoss_info is not None:\n",
+    "if test_is_configured(hoss_info, 'temporal_collection'):\n",
     "    hoss_temporal_file_name = 'hoss_temporal.nc4'\n",
     "    hoss_temporal_request = Request(collection=hoss_info['temporal_collection'],\n",
     "                                    granule_id=hoss_info['temporal_granule_id'],\n",
@@ -407,7 +412,7 @@
     "\n",
     "    print_success('HOSS temporal request.')\n",
     "else:\n",
-    "    print(f'HOSS is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+    "    print(f'Skipping - HOSS is not configured for this test in {harmony_environment}.')"
    ]
   },
   {
@@ -429,7 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if hoss_info is not None:\n",
+    "if test_is_configured(hoss_info, 'collection'):\n",
     "    hoss_named_dims_file_name = 'hoss_named_dimensions.nc4'\n",
     "    hoss_named_dims_request = Request(collection=hoss_info['collection'],\n",
     "                                      granule_id=[hoss_info['granule_id']],\n",
@@ -446,7 +451,7 @@
     "\n",
     "    print_success('HOSS named dimensions request.')\n",
     "else:\n",
-    "    print(f'HOSS is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+    "    print(f'Skipping - HOSS is not configured for this test in {harmony_environment}.')"
    ]
   },
   {
@@ -487,7 +492,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if hoss_shape_info is not None:\n",
+    "if test_is_configured(hoss_shape_info, 'collection'):\n",
     "    hoss_shape_file_name = 'hoss_shape_file.nc4'\n",
     "    hoss_shape_request = Request(collection=hoss_shape_info['collection'],\n",
     "                                 granule_id=hoss_shape_info['granule_id'],\n",
@@ -502,7 +507,7 @@
     "\n",
     "    print_success('HOSS-Geographic polygon spatial subset request.')\n",
     "else:\n",
-    "    print(f'HOSS-Geographic is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+    "    print(f'Skipping - HOSS-Geographic is not configured for this test in {harmony_environment}.')"
    ]
   },
   {
@@ -522,7 +527,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if hoss_info is not None:\n",
+    "if test_is_configured(hoss_info, 'bounds_collection'):\n",
     "    hoss_bounds_file_name = 'hoss_bounds.nc4'\n",
     "    hoss_bounds_bbox = BBox(w=60, s=-15, e=75, n=0)\n",
     "    hoss_bounds_request = Request(collection=hoss_info['bounds_collection'],\n",
@@ -541,7 +546,7 @@
     "\n",
     "    print_success('HOSS bounds request.')\n",
     "else:\n",
-    "    print(f'HOSS is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+    "    print(f'Skipping - HOSS is not configured for this test in {harmony_environment}.')"
    ]
   },
   {
@@ -603,7 +608,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if hoss_projected_info is not None:\n",
+    "if test_is_configured(hoss_projected_info, 'collection'):\n",
     "    hoss_projected_filename = 'hoss_projected_north_slope.nc4'\n",
     "    hoss_projected_request = Request(collection=hoss_projected_info['collection'],\n",
     "                                     granule_id=hoss_projected_info['granule_id'],\n",
@@ -619,7 +624,7 @@
     "\n",
     "    print_success('HOSS-projection-gridded with bounding box.')\n",
     "else:\n",
-    "    print(f'HOSS-projection-gridded is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+    "    print(f'Skipping - HOSS Projection-Gridded is not configured for this test in {harmony_environment}.')"
    ]
   },
   {
@@ -643,7 +648,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if hoss_projected_info is not None:\n",
+    "if test_is_configured(hoss_projected_info, 'collection'):\n",
     "    hoss_projected_shape_filename = 'hoss_projected_north_slope_shape.nc4'\n",
     "    hoss_projected_request = Request(collection=hoss_projected_info['collection'],\n",
     "                                     granule_id=hoss_projected_info['granule_id'],\n",
@@ -659,7 +664,7 @@
     "\n",
     "    print_success('Subsetting projected grid with shapefile.')\n",
     "else:\n",
-    "    print(f'HOSS is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+    "    print(f'Skipping - HOSS is not configured for this test in {harmony_environment}.')"
    ]
   },
   {
