--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -219,7 +219,7 @@
     "        print_success('all test files generated')\n",
     "\n",
     "        expected_output_metadata = {\n",
-    "            'driver': 'PNG', **common_aster_metadata, 'count': 1\n",
+    "            **common_aster_metadata, 'driver': 'PNG', 'count': 1, 'nodata': 255\n",
     "        }\n",
     "\n",
     "        assert_dataset_produced_correct_results(\n",
@@ -278,8 +278,6 @@
     "        expected_output_metadata = {\n",
     "            'driver': 'JPEG', **common_aster_metadata, 'count': 3\n",
     "        }        \n",
-    "        with rasterio.open(test_files[0]) as test_file:\n",
-    "            print(test_file.meta)\n",
     "\n",
     "        assert_dataset_produced_correct_results(\n",
     "            test_files[0], expected_output_metadata, reference_files[0], 'JPEG'\n",
@@ -442,7 +440,7 @@
     "        print_success('all test files generated')\n",
     "\n",
     "        expected_output_metadata = {\n",
-    "            'driver': 'PNG', 'count': 1, **common_measures_metadata\n",
+    "            **common_measures_metadata, 'driver': 'PNG', 'count': 1 \n",
     "        }\n",
     "\n",
     "        assert_dataset_produced_correct_results(\n",
