Updating the regression regridding test

--- a/test/geoloco/Geoloco_Regression.ipynb
+++ b/test/geoloco/Geoloco_Regression.ipynb
@@ -62,8 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'\n",
-    "# harmony_host_url = 'http://localhost:3000'"
+    "# harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'\n",
+    "harmony_host_url = 'http://localhost:3000'"
    ]
   },
   {
@@ -119,17 +119,20 @@
     "mod021km_non_production_info = {'collection' : Collection(id='C1256826282-LAADSCDUAT'),\n",
     "                               'granule_id' : 'G1259320275-LAADSCDUAT',\n",
     "                               'variable' : ['EV_1KM_RefSB'],\n",
-    "                               'downscale_size' : [0.004505, 0.004505]} #[0.0282, 0.0282] # Half of MOD021KM Raster Resolution (1 km) at the equater using WGS84\n",
+    "                               'downscale_size' : [0.004505, 0.004505],\n",
+    "                               'interpolation_string': 'Nearest'}\n",
     "\n",
     "mod35l2_non_production_info = {'collection' : Collection(id='C1257437479-LAADSCDUAT'),\n",
     "                               'granule_id' : 'G1259231639-LAADSCDUAT',\n",
     "                               'variable' : ['Cloud_Mask'],\n",
-    "                               'downscale_size' : [0.004505, 0.004505]}\n",
+    "                               'downscale_size' : [0.004505, 0.004505],\n",
+    "                               'interpolation_string': 'Nearest'}\n",
     "\n",
     "mod08d3_non_production_info = {'collection' : Collection(id='C1257773477-LAADSCDUAT'),\n",
     "                               'granule_id' : 'G1259320277-LAADSCDUAT',\n",
     "                               'variable' : ['Aerosol_Optical_Depth_Land_Ocean_Mean'],\n",
-    "                               'downscale_size' : [.5, .5]}\n",
+    "                               'downscale_size' : [.5, .5],\n",
+    "                               'interpolation_string': 'Nearest'}\n",
     "\n",
     "geo_proj4_string = '+a=6378137.0 +b=6356752.3142451793 +no_defs +proj=latlong'\n",
     "utm_proj4_string = '+a=6378137.0 +b=6356752.3142451793 +no_defs +proj=utm +unit=meters +zone=59'\n",
@@ -287,19 +290,22 @@
     "                                          granule_id=mod021km_geoloco_info['granule_id'],\n",
     "                                          variables=mod021km_geoloco_info['variable'],\n",
     "                                          crs=geo_proj4_string,\n",
-    "                                          scale_size=mod021km_geoloco_info['downscale_size'])\n",
+    "                                          scale_size=mod021km_geoloco_info['downscale_size'],\n",
+    "                                          interpolation=mod021km_geoloco_info['interpolation_string'])\n",
     "\n",
     "    mod35l2_regridding_request = Request(collection=mod35l2_geoloco_info['collection'],\n",
     "                                         granule_id=mod35l2_geoloco_info['granule_id'],\n",
     "                                         variables=mod35l2_geoloco_info['variable'],\n",
     "                                         crs=geo_proj4_string,\n",
-    "                                         scale_size=mod35l2_geoloco_info['downscale_size'])\n",
+    "                                         scale_size=mod35l2_geoloco_info['downscale_size'],\n",
+    "                                         interpolation=mod35l2_geoloco_info['interpolation_string'])\n",
     "\n",
     "    mod08d3_regridding_request = Request(collection=mod08d3_geoloco_info['collection'],\n",
     "                                         granule_id=mod08d3_geoloco_info['granule_id'],\n",
     "                                         variables=mod08d3_geoloco_info['variable'],\n",
     "                                         crs=geo_proj4_string,\n",
-    "                                         scale_size=mod08d3_geoloco_info['downscale_size'])\n",
+    "                                         scale_size=mod08d3_geoloco_info['downscale_size'],\n",
+    "                                         interpolation=mod08d3_geoloco_info['interpolation_string'])\n",
     "\n",
     "    mod021km_regridding_compare_file = submit_and_download(harmony_client, mod021km_regridding_request, file_indicators['MOD021KM'])\n",
     "    mod35l2_regridding_compare_file = submit_and_download(harmony_client, mod35l2_regridding_request, file_indicators['MOD35_L2'])\n",
@@ -315,6 +321,8 @@
     "    \n",
     "    mod35l2_regridding_truth_dims = get_dim_sizes(regridding_truth_data['MOD35_L2'])\n",
     "    mod35l2_regridding_dims = get_dim_sizes(mod35l2_regridding_compare_file)\n",
+    "    print(mod35l2_regridding_truth_dims)\n",
+    "    print(mod35l2_regridding_dims)\n",
     "    if mod35l2_regridding_truth_dims != mod35l2_regridding_dims:\n",
     "        print_error('MOD35_L2 Regridding mismatch.')\n",
     "        geoloco_regridding_tests = 0\n",
@@ -403,6 +411,14 @@
     "else:\n",
     "    print(f'Geoloco is not configured for this environment: \"{harnomy_environment}\" - skipping test.')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f73d57ef-f21b-4d8d-b692-2ba411212301",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
