Starting to add geoloco to the testing framework

--- a/test/geoloco/Geoloco_Regression.ipynb
+++ b/test/geoloco/Geoloco_Regression.ipynb
@@ -62,8 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'\n",
-    "harmony_host_url = 'http://localhost:3000'"
+    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'\n",
+    "# harmony_host_url = 'http://localhost:3000'"
    ]
   },
   {
@@ -435,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
