Added Harmony SIT URL and parameterized the 'harmony_host_url' cell

--- a/test/geoloco/Geoloco_Regression.ipynb
+++ b/test/geoloco/Geoloco_Regression.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "## Set Default Parameters\n",
     "\n",
-    "`papermill` requires default values for paramters used on the workflow. In this case, `harmony_host_url`\n",
+    "`papermill` requires default values for parameters used on the workflow. In this case, `harmony_host_url`\n",
     "\n",
     "The following are the valid values\n",
     "- Production: https://harmony.earthdata.nasa.gov\n",
@@ -59,11 +59,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "68b5e491-086c-48c0-b9bd-42ae068aa8f4",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
-    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'\n",
-    "# harmony_host_url = 'http://localhost:3000'"
+    "# harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'\n",
+    "# harmony_host_url = 'https://harmony.sit.earthdata.nasa.gov'\n",
+    "harmony_host_url = 'http://localhost:3000'"
    ]
   },
   {
@@ -435,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
