Changing the default Harmony Host URL from LocalHost to UAT

--- a/test/geoloco/Geoloco_Regression.ipynb
+++ b/test/geoloco/Geoloco_Regression.ipynb
@@ -70,9 +70,9 @@
    },
    "outputs": [],
    "source": [
-    "# harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'\n",
+    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'\n",
     "# harmony_host_url = 'https://harmony.sit.earthdata.nasa.gov'\n",
-    "harmony_host_url = 'http://localhost:3000'"
+    "# harmony_host_url = 'http://localhost:3000'"
    ]
   },
   {
