Fixing a typo and removing AWS wording from the description

--- a/test/geoloco/Geoloco_Regression.ipynb
+++ b/test/geoloco/Geoloco_Regression.ipynb
@@ -11,9 +11,7 @@
     "\n",
     "Geoloco ideally operates on Levels 3 & 4 data. Level 1B and 2 data can be operated, but the outputs will be automatically reprojected to `Geographic` and regridded to its raster resolution if no `proj4` string is supplied. \n",
     "\n",
-    "Although geoloco can perform variable and location subsetting, reprojection, resampling and regridding, this regression regression test suite will focus on reprojection, resampling and regridding. \n",
-    "\n",
-    "This notebook will have to be ran from within the AWS `us-west-2` to access data in S3.\n",
+    "Although geoloco can perform variable and location subsetting, reprojection, resampling and regridding, this regression test suite will focus on reprojection, resampling and regridding. \n",
     "\n",
     "## Prerequisites\n",
     "\n",
